[metadata]
name = dragon_stand
author = Scott Dixon
author_email = scottd.thirtytwo@gmail.com
url = https://32bits.io
description = Utilities for testing the l3xz dragon-head pan-tilt fixture
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE.rst
keywords = l3xz, robotis, dynamixel, pan-tilt, openmv
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Robotics Systems
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Servo Control
    Topic :: Software Development :: Computer Vision
    Topic :: System :: Robotics
    Typing :: Typed

[options]
package_dir=
    =src
packages=find:
package_data={"dragon_stand": ["py.typed"]}
install_requires=
    dynamixel_sdk

zip_safe = False

python_requires = >=3.9

[options.entry_points]
console_scripts =
    nnvg = dragon_stand.__main__:main

[options.packages.find]
where=src
